selfhost/test/typechecker/indexing/tuple_error_non_literal.out
Error at %FILE_NAME%:3:2
Unsupported tuple indexing operation
  |  t[1 + 1]
      ^
Cannot use this expression as index value. Tuple index values must always be Int literals
