selfhost/test/typechecker/indexing/tuple_error_non_literal.abra
val t = (1, "two", [3])

t[1 + 1]